kustomize/network/cilium/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: highglade-gateway
  namespace: network
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: web-gw
      allowedRoutes:
        namespaces:
          from: Same
    - protocol: HTTPS
      port: 443
      name: secure-gw
      allowedRoutes:
        namespaces:
          from: Same
